@@ -14,6 +14,7 @@ namespace Cobweb\ExternalImport\Step;
  * The TYPO3 project - inspiring people to share!
  */
 
+use Cobweb\ExternalImport\Exception\CriticalFailureException;
 use TYPO3\CMS\Core\Utility\GeneralUtility;
 use TYPO3\CMS\Extbase\Utility\LocalizationUtility;
 
@@ -67,6 +68,9 @@ class ValidateDataStep extends AbstractStep
                         $this->abortFlag = true;
                         break;
                     }
+                } catch (CriticalFailureException $e) {
+                    $this->abortFlag = true;
+                    break;
                 } catch (\Exception $e) {
                     $this->importer->debug(
                             sprintf(
