@@ -1,3 +1,7 @@
+2019-02-17 Francois Suter (Cobweb)  <typo3@cobweb.ch>
+
+	* Add critical exception to abort step if needed, resolves #83
+
 2019-02-14 Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
 	* Fix failing functional tests, resolves #89
